--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,9 @@
 
             <div class="panel" id="solutions-panel">
                 <h2>诊疗动作（双击修改）</h2>
+                <div class="panel-controls">
+                    <button id="add-action-btn" class="add-button">+ 新建动作</button>
+                </div>
                 <div id="solutions-container" class="chip-container">
                     <!-- JS会在这里动态生成诊疗动作词块 -->
                 </div>
